# rs2glsl

./: Cargo.toml  README.md
crates/rs2glsl-adapters/: Cargo.toml
crates/rs2glsl-adapters/src/: kodelife.rs  lib.rs  shadertoy.rs
crates/rs2glsl-cli/: Cargo.toml
crates/rs2glsl-cli/src/: main.rs
crates/rs2glsl-macros/: Cargo.toml
crates/rs2glsl-macros/src/: lib.rs
crates/rs2glsl-prelude/: Cargo.toml
crates/rs2glsl-resolver/: Cargo.toml
crates/rs2glsl-resolver/src/: lib.rs
crates/rs2glsl-shaders/: Cargo.toml
crates/rs2glsl-shaders/src/: lib.rs
crates/rs2glsl-stdlib/: Cargo.toml
crates/rs2glsl-stdlib/src/: lib.rs
crates/rs2glsl-transpiler/: Cargo.toml
crates/rs2glsl-transpiler/src/: errors.rs  lib.rs  types.rs
crates/shader-cli/: Cargo.toml
crates/shader-cli/src/: main.rs  resolver.rs
crates/shader-macro/: Cargo.toml
crates/shader-prelude/: Cargo.toml
crates/shader-prelude/src/: lib.rs
crates/shader-solver/: Cargo.toml
crates/shader-solver/src/: lib.rs
crates/shader-transpiler/: Cargo.toml
crates/shader-transpiler/src/: codegen_glsl.rs  errors.rs  lib.rs  types.rs
crates/shaders/: Cargo.toml
crates/shaders/src/: lib.rs
docs/reference/: index.ja.md  stdlib.ja.md  syntax.ja.md
examples/: 8bit-cosmos-shadertoy.rs  basic.rs  const.rs  for_loop.rs  if_expr.rs  kodelife.rs  koyuki.rs  shadertoy.rs  std.rs  struct.rs  type_inference.rs  types.rs
examples/adapters/: kodelife.rs  shadertoy.rs
examples/test/: type_alias.rs  type_inference.rs  unary.rs  user_fn.rs
tmp/my_vj/: Cargo.toml
(+12 files in other folders)
