[package]
name = "rs2glsl"
version = "0.1.0"
edition = "2024"
autoexamples = false
[workspace]
members = [
  "crates/rs2glsl-macros",
  "crates/rs2glsl-prelude",
  "crates/rs2glsl-resolver",
  "crates/rs2glsl-transpiler",
  "crates/rs2glsl-cli",
  "crates/rs2glsl-adapters", 
  "crates/rs2glsl-stdlib"]
resolver = "2"
