[package]
name = "shader-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.117", features = ["full"] }
toml = "0.9.8"

[dev-dependencies]
shader-transpiler = { version = "0.1.0", path = "../shader-transpiler" }
